--- a/school_app/views/teacher_menu_views.xml
+++ b/school_app/views/teacher_menu_views.xml
@@ -2,7 +2,9 @@
 <odoo>
 
     <menuitem id="menu_teacher_root" name="Teacher" web_icon="school_app,static/description/icon.png" sequence="0"/>
-    <menuitem  id="menu_teacher_details" name="Teacher Details" parent="menu_teacher_root"  action="action_teacher_detail"  />
-    <menuitem  id="menu_course" name="Teacher Course" parent="menu_teacher_root" action="action_course_detail" />
+    <menuitem  id="menu_teacher_details" name="Teacher Details" parent="menu_teacher_root"  action="action_teacher_detail" sequence="20"/>
+    <menuitem  id="menu_course" name="Teacher Course" parent="menu_teacher_root" action="action_course_detail" sequence="100"/>
+
+    <!-- <menuitem  id="menu_cancle_course" name="Cancle" parent="menu_course" action="action_cancle_course" sequence="20"/> -->
 
 </odoo>
