--- a/Edu_Skill/views/user_details.xml
+++ b/Edu_Skill/views/user_details.xml
@@ -1,34 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="view_teacher_tree" model="ir.ui.view">
-        <field name="name">teacher.detail.tree</field>
-        <field name="model">teacher.detail</field>
+    <record id="view_user_tree" model="ir.ui.view">
+        <field name="name">user.detail.tree</field>
+        <field name="model">user.detail</field>
         <field name="arch" type="xml">
             <tree>
                 <field name="first_name"/>
                 <field name="last_name"/>
                 <field name="age"/>
                 <field name="gender"/>
-
             </tree>
         </field>
     </record>
 
-    <record id="view_teacher_form" model="ir.ui.view">
-        <field name="name">teacher.detail.form</field>
-        <field name="model">teacher.detail</field>
+    <record id="view_user_form" model="ir.ui.view">
+        <field name="name">user.detail.form</field>
+        <field name="model">user.detail</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
-                    <!-- Create a smart buttton -->
-                    <div class="oe_button_box" name="button_box">
-                        <button name="action_open_course" type="object" class="oe_stat_button" icon="fa-book">
-                            <div class="o_stat_info">
-                                <field name="course_count" class="oe_stat_value" />
-                                <span class="o_stat_text">Course</span>
-                            </div>
-                        </button>
-                    </div>
                     <group>
                         <group>
                             <label for="first_name"/>
@@ -50,36 +40,43 @@
                             <field name="gender"/>
                             <field name="email" widget="phone"/>
                             <field name="qualification"/>
+                            <field name="graduation"/>
                         </group>
                         <group>
+                            <field name="last_name"/>
                             <field name="birth_date"/>
                             <field name="phone_number" widget="phone" />
                             <field name="address"/>
+                            <field name="password"/>
                             <field name="active" invisible="1"/>
                         </group>
                     </group>
                     <group>
                         <field name="description"/>
                     </group>
+                    <group>
+                        <div style="text-align:center">
+                        </div>
+                    </group>
                 </sheet>
             </form>
         </field>
     </record>
 
-    <record id="action_teacher_detail" model="ir.actions.act_window">
-        <field name="name">Teacher</field>
+    <record id="action_user_detail" model="ir.actions.act_window">
+        <field name="name">User</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="res_model">teacher.detail</field>
+        <field name="res_model">user.detail</field>
         <field name="view_mode">tree,form</field>
         <field name="context">{}</field>
         <field name="help" type="html">
-            <p class="o_view_nocontent_smiling_face">No teacher Found.. </p>
+            <p class="o_view_nocontent_smiling_face">No User Found.. </p>
         </field>
     </record>
 
-    <record id="view_teacher_search" model="ir.ui.view">
-        <field name="name">teacher.detail.search</field>
-        <field name="model">teacher.detail</field>
+    <record id="view_user_search" model="ir.ui.view">
+        <field name="name">user.detail.search</field>
+        <field name="model">user.detail</field>
         <field name="arch" type="xml">
             <search>
                 <field name="first_name" string="First Name" filter_domain="['|',('first_name','ilike',self),('last_name','ilike',self)]" />
