--- a/Edu_Skill/views/teacher_menu_views.xml
+++ b/Edu_Skill/views/teacher_menu_views.xml
@@ -2,13 +2,17 @@
 <odoo>
 
     <menuitem id="menu_root" name="Edu Skill" web_icon="Edu_Skill/static/description/icon.png" action="action_teacher_detail" sequence="0"/>
-    <menuitem id="menu_teacher" name="Teacher Details" parent="menu_root" action="action_teacher_detail" />
+    <menuitem id="menu_teacher" name="Teacher" parent="menu_root" action="action_teacher_detail" />
 
     <menuitem id="menu_category" name="Category" parent="menu_root" action="action_category_detail" />
 
-    <menuitem  id="menu_course" name="Course Details" parent="menu_root" action="action_course_detail"/>
-    <menuitem  id="menu_video" name="Video Details" parent="menu_root" action="action_video_detail"/>
+    <menuitem  id="menu_course" name="Course" parent="menu_root" action="action_course_detail"/>
+    <menuitem  id="menu_video" name="Video" parent="menu_root" action="action_video_detail"/>
     <menuitem  id="menu_user" name="User Details" parent="menu_root" action="action_user_detail"/>
-
-
+    <menuitem  id="menu_quiz" name="Quiz" parent="menu_root" action="action_quiz_detail"/>
+    <menuitem  id="menu_quiz_detail" name="Quiz Details" parent="menu_quiz" action="action_quiz_detail"/>
+    <menuitem  id="menu_quiz_result_detail" name="Quiz Result" parent="menu_quiz" action="action_quiz_result_detail"/>
+    <menuitem id="menu_order" name="Order" parent="menu_root"/>
+    <menuitem  id="menu_course_order_detail" name="Course Order" parent="menu_order" action="action_order_detail"/>
+    <menuitem  id="menu_course_order_item_detail" name="Course Item" parent="menu_order" action="action_order_item_detail"/>
 </odoo>
