--- a/Edu_Skill/views/category_details_views.xml
+++ b/Edu_Skill/views/category_details_views.xml
@@ -20,7 +20,7 @@
                 <sheet>
                     <!-- Create a smart buttton -->
                     <div class="oe_button_box" name="button_box">
-                            <button name="action_open_course" type="object" class="oe_stat_button" icon="fa-book">
+                            <button name="action_open_course" type="object" class="oe_stat_button" icon="fa-book" attrs="{'invisible': [('course_count', '=', 0)]}">
                                 <div class="o_stat_info">
                                     <field name="course_count" class="oe_stat_value" />
                                     <span class="o_stat_text">Course</span>
