--- a/Edu_Skill/views/teacher_details_views.xml
+++ b/Edu_Skill/views/teacher_details_views.xml
@@ -22,7 +22,7 @@
                 <sheet>
                     <!-- Create a smart buttton -->
                     <div class="oe_button_box" name="button_box">
-                        <button name="action_open_course" type="object" class="oe_stat_button" icon="fa-book">
+                        <button name="action_open_course" type="object" class="oe_stat_button" icon="fa-book" attrs="{'invisible': [('course_count', '=', 0)]}">
                             <div class="o_stat_info">
                                 <field name="course_count" class="oe_stat_value" />
                                 <span class="o_stat_text">Course</span>
@@ -55,6 +55,8 @@
                             <field name="birth_date"/>
                             <field name="phone_number" widget="phone" />
                             <field name="address"/>
+                            <field name="course_count"/>
+
                             <field name="active" invisible="1"/>
                         </group>
                     </group>
