--- a/school_app/views/teacher_menu_views.xml
+++ b/school_app/views/teacher_menu_views.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
 
-    <menuitem id="menu_teacher_root" name="Teacher" web_icon="school_app,static/description/icon.png" sequence="0"/>
+    <menuitem id="menu_teacher_root" name="Teacher" web_icon="school_app,static/description/icon.png" sequence="0" action=""/>
     <menuitem  id="menu_teacher_details" name="Teacher Details" parent="menu_teacher_root"  action="action_teacher_detail"  />
-    <menuitem  id="menu_course" name="Teacher Course" parent="menu_teacher_root" action="action_course_detail" />
+    <menuitem  id="menu_course" name="Course" parent="menu_teacher_root" action="action_course_detail" />
 
 </odoo>
