--- a/Edu_Skill/views/course_order.xml
+++ b/Edu_Skill/views/course_order.xml
@@ -13,6 +13,15 @@
             </tree>
         </field>
     </record>
+    <data>
+       <record id="seq_order_detail" model="ir.sequence">
+           <field name="name">Course Order</field>
+           <field name="code">order.detail</field>
+           <field name="prefix">EO</field>
+           <field name="padding">5</field>
+           <field name="company_id" eval="False"/>
+       </record>
+    </data>
 
     <record id="view_order_detail_form" model="ir.ui.view">
         <field name="name">order.detail.form</field>
@@ -20,6 +29,9 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <h1>
+                        <field name="reference_no"/>
+                    </h1>
                     <group>
                         <group>
                             <field name="first_name"/>
