--- a/Edu_Skill/views/course_order.xml
+++ b/Edu_Skill/views/course_order.xml
@@ -17,7 +17,7 @@
        <record id="seq_order_detail" model="ir.sequence">
            <field name="name">Course Order</field>
            <field name="code">order.detail</field>
-           <field name="prefix">EO</field>
+           <field name="prefix">CO</field>
            <field name="padding">5</field>
            <field name="company_id" eval="False"/>
        </record>
