--- a/Edu_Skill/views/course_order_item.xml
+++ b/Edu_Skill/views/course_order_item.xml
@@ -13,13 +13,24 @@
             </tree>
         </field>
     </record>
-
+    <data>
+       <record id="seq_order_item_detail" model="ir.sequence">
+           <field name="name">Course Order Item</field>
+           <field name="code">course.item.order.detail</field>
+           <field name="prefix">COI</field>
+           <field name="padding">5</field>
+           <field name="company_id" eval="False"/>
+       </record>
+    </data>
     <record id="view_order_form" model="ir.ui.view">
         <field name="name">course.item.order.detail.form</field>
         <field name="model">course.item.order.detail</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <h1>
+                        <field name="reference_no"/>
+                    </h1>
                     <group>
                         <field name="order_id"/>
                         <field name="user_first_name"/>
