--- a/Edu_Skill/views/quiz_details.xml
+++ b/Edu_Skill/views/quiz_details.xml
@@ -10,13 +10,24 @@
             </tree>
         </field>
     </record>
-
+    <data>
+       <record id="seq_order_detail" model="ir.sequence">
+           <field name="name">Course Order</field>
+           <field name="code">order.detail</field>
+           <field name="prefix">CO</field>
+           <field name="padding">5</field>
+           <field name="company_id" eval="False"/>
+       </record>
+    </data>
     <record id="view_quiz_form" model="ir.ui.view">
         <field name="name">quiz.detail.form</field>
         <field name="model">quiz.detail</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <h1>
+                        <field name="reference_no"/>
+                    </h1>
                     <group>
                         <group>
                             <field name="question"/>
@@ -57,9 +68,6 @@
                 <group expand="0" string="Group By">
                     <filter string="Gender" name="group_by_video" context="{'group_by':'course_id'}"/>
                 </group>
-                <searchpanel>
-                    <field name="course_id" icon="fa-video" select="multi" enable_counters="1"/>
-                </searchpanel>
             </search>
         </field>
     </record>
