--- a/Edu_Skill/views/quiz_result_detail.xml
+++ b/Edu_Skill/views/quiz_result_detail.xml
@@ -18,6 +18,9 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <h1>
+                        <field name="reference_no"/>
+                    </h1>
                     <group>
                         <group>
                             <field name="course_id"/>
@@ -37,6 +40,15 @@
             </form>
         </field>
     </record>
+    <data>
+       <record id="seq_quiz_result" model="ir.sequence">
+           <field name="name">Quiz Result</field>
+           <field name="code">quiz.result</field>
+           <field name="prefix">QR</field>
+           <field name="padding">5</field>
+           <field name="company_id" eval="False"/>
+       </record>
+    </data>
 
     <record id="action_quiz_result_detail" model="ir.actions.act_window">
         <field name="name">Quiz Result</field>
