--- a/Edu_Skill/views/teacher_details_views.xml
+++ b/Edu_Skill/views/teacher_details_views.xml
@@ -9,10 +9,18 @@
                 <field name="last_name"/>
                 <field name="age"/>
                 <field name="gender"/>
-
             </tree>
         </field>
     </record>
+    <data>
+       <record id="seq_teacher_detail" model="ir.sequence">
+           <field name="name">Teacher Detail</field>
+           <field name="code">teacher.detail</field>
+           <field name="prefix">T</field>
+           <field name="padding">5</field>
+           <field name="company_id" eval="False"/>
+       </record>
+    </data>
 
     <record id="view_teacher_form" model="ir.ui.view">
         <field name="name">teacher.detail.form</field>
@@ -20,6 +28,9 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <h1>
+                        <field name="reference_no"/>
+                    </h1>
                     <!-- Create a smart buttton -->
                     <div class="oe_button_box" name="button_box">
                         <button name="action_open_course" type="object" class="oe_stat_button" icon="fa-book" attrs="{'invisible': [('course_count', '=', 0)]}">
