--- a/Edu_Skill/views/user_details.xml
+++ b/Edu_Skill/views/user_details.xml
@@ -12,13 +12,24 @@
             </tree>
         </field>
     </record>
-
+    <data>
+       <record id="seq_user_detail" model="ir.sequence">
+           <field name="name">User Detail</field>
+           <field name="code">user.detail</field>
+           <field name="prefix">U</field>
+           <field name="padding">5</field>
+           <field name="company_id" eval="False"/>
+       </record>
+    </data>
     <record id="view_user_form" model="ir.ui.view">
         <field name="name">user.detail.form</field>
         <field name="model">user.detail</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <h1>
+                        <field name="reference_no"/>
+                    </h1>
                     <group>
                         <group>
                             <label for="first_name"/>
