--- a/Edu_Skill/views/video_details_views.xml
+++ b/Edu_Skill/views/video_details_views.xml
@@ -12,13 +12,24 @@
             </tree>
         </field>
     </record>
-
+    <data>
+       <record id="seq_video_detail" model="ir.sequence">
+           <field name="name">Video Detail</field>
+           <field name="code">video.detail</field>
+           <field name="prefix">V</field>
+           <field name="padding">5</field>
+           <field name="company_id" eval="False"/>
+       </record>
+    </data>
     <record id="view_video_form" model="ir.ui.view">
         <field name="name">video.detail.form</field>
         <field name="model">video.detail</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <h1>
+                        <field name="reference_no"/>
+                    </h1>
                     <field name="image"  widget="image" class="oe_avatar"/>
                     <group>
                         <group>
